gitignores for datasets added

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,7 @@ dataset/
 myImages/
 savedDataset/
 savedGrayDataset/
+savedDatasetShallowRGB/
+savedDatasetShallowGrayscale/
+savedDatasetDeepRGB/
+savedDatasetDeepGrayscale/
