high rest models made

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,5 @@ savedDatasetShallowRGB/
 savedDatasetShallowGrayscale/
 savedDatasetDeepRGB/
 savedDatasetDeepGrayscale/
+savedDatasetShallowHR/
+savedDatasetDeepHR/
