gitignore and myImages.zip. Thats all thats been added and just for tidying up my repo/portfolio

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,5 @@ h5/tl_vgg16_model_shallow.h5
 h5/tl_vgg16_model_fine_tuned.h5
 json/tl_vgg16_model_shallow.json
 json/tl_vgg16_model_vgg16_fine_tuned.json
+ignore1.ipynb
+ignore2.ipynb
